[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nt-utils"
authors = [{name = "Anton Vasilev", email = "a.vasilev@neurotrade.ru"}]
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version", "description"]
dependencies = [
    "docstring-parser",
    "xxhash",
]

[project.optional-dependencies]
tests = [
    "nt-dev>=0.34",
    "pytest-asyncio",
    "types-xxhash",
]
dev = [
    "nt-dev>=0.34",
]

[tool.flit.module]
name = "nt_utils"

[tool.flit.sdist]
include = [
    "README.md",
]
exclude = [
    ".gitignore",
    "tests/*",
]

[tool.semantic_release]
version_variable = "nt_utils/__init__.py:__version__"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules"

[tool.mypy]
files = ["."]
